--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,18 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .principal {
+  margin-top: 15rem;
   text-align: center;
-  margin-top: 10vw;
-  font-size: xx-large;
 }
 
-.title,
+.section-title,
 .cronometer {
-  margin-bottom: 2vw;
+  font-size: xx-large;
+  margin-bottom: 2rem;
 }
 
 .paragraph {
@@ -20,14 +20,14 @@
 }
 
 .btn {
-  font-size: xx-large;
-  width: 150px;
-  height: 75px;
-  border-radius: 50%;
-  margin: 0 2vw;
-  border: 1px solid blueviolet;
   background-color: blueviolet;
+  border: 0.063rem solid blueviolet;
+  border-radius: 1.25rem;
   color: aliceblue;
+  font-size: x-large;
+  height: 3.125rem;
+  margin: 0 2rem;
+  width: 9.375rem;
 }
 
 .btn:hover {
