--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,24 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: 0.3s;
 }
 
 .principal {
-  margin-top: 15rem;
   text-align: center;
 }
 
-.section-title,
-.cronometer {
+.section-title {
+  margin-top: 10rem;
+}
+
+.section-title {
   font-size: xx-large;
+  margin-bottom: 2rem;
+}
+
+.cronometer {
+  font-size: 10rem;
   margin-bottom: 2rem;
 }
 
@@ -36,4 +44,44 @@
 
 .btn:active {
   opacity: 0.3;
+}
+
+@media screen and (max-width: 730px) {
+  .section-title {
+    font-size: x-large;
+    margin-top: 7.5rem;
+  }
+
+  .cronometer {
+    font-size: 3rem;
+  }
+
+  .btn {
+    display: block;
+    margin: auto auto 2rem auto;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .section-title {
+    margin-top: 3.75rem;
+  }
+}
+
+@media screen and (max-width: 240px) {
+  .section-title {
+    margin-top: 0.5rem;
+    font-size: large;
+  }
+
+  .cronometer {
+    font-size: 2.2rem;
+  }
+
+  .btn {
+    margin: auto auto 0.5rem auto;
+    font-size: large;
+    width: 40%;
+  }
 }
