--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
+  background-color: #101d00;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -18,6 +19,7 @@
 }
 
 .section-title {
+  color: aliceblue;
   margin-top: 10rem;
 }
 
@@ -29,6 +31,7 @@
 .cronometer {
   font-size: 10rem;
   margin-bottom: 2rem;
+  color: aliceblue;
 }
 
 .paragraph {
